--- a/styles/style.css
+++ b/styles/style.css
@@ -16,10 +16,13 @@
 
 html {
   height: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
   margin: 0;
+  min-width: 1280px;
   height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
@@ -89,16 +92,16 @@ button, input {
 /* НАВИГАЦИЯ */
 
 .page-header {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
 }
 
 .logo {
+  position: absolute;
   z-index: 2;
   width: 139px;
-  margin-left: 70px;
-  margin-right: 30px;
-  margin-bottom: -5px;
+  left: 70px;
 }
 
 .logo img {
@@ -112,6 +115,8 @@ button, input {
   flex-wrap: wrap;
   flex-grow: 1;
   justify-content: space-between;
+  margin-right: 70px;
+  margin-left: 209px;
 }
 
 .navigation-list {
@@ -125,8 +130,8 @@ button, input {
 }
 
 .navigation-user {
-  width: 264px;
-  margin-right: 70px;
+  justify-content: flex-end;
+  width: 320px;
 }
 
 .navigation-item {
@@ -137,9 +142,8 @@ button, input {
   position: relative;
   display: block;
   min-width: 42px;
-  height: 65px;
   box-sizing: border-box;
-  padding: 20px 17px;
+  padding: 20px 17px 19px 17px;
   font-size: 20px;
   line-height: 26px;
   font-weight: 700;
@@ -178,8 +182,8 @@ button, input {
   display: block;
   height: 0;
   border-bottom: 2px solid #756257;
-  margin-top: 17px;
-  margin-bottom: -17px;
+  margin-top: 19px;
+  margin-bottom: -19px;
 }
 
 .navigation-search-button {
@@ -209,7 +213,7 @@ button, input {
 .favorites-counter::after {
   content: "";
   position: absolute;
-  top: 15px;
+  top: 5px;
   right: -2px;
   display: block;
   width: 20px;
@@ -220,7 +224,7 @@ button, input {
 
 .favorites-number {
   position: absolute;
-  top: 13px;
+  top: 3px;
   left: 29px;
   display: block;
   font-size: 10px;
@@ -308,6 +312,7 @@ button, input {
 
 .advantages-item-wrapper {
   width: 230px;
+  padding: 20px;
 }
 
 .advantages-list > .advantages-item:not(.devil-bridge) {
@@ -554,7 +559,6 @@ button, input {
   display: flex;
   justify-content: space-between;
   max-width: 800px;
-  height: 60px;
   margin: 0 auto;
 }
 
@@ -566,7 +570,7 @@ input[name="newsletter-email"] {
   box-sizing: border-box;
   font-size: 18px;
   font-weight: 400;
-  line-height: 21;
+  line-height: 21px;
   border: 0;
   border-radius: 10px 0 0 10px;
 }
@@ -582,7 +586,6 @@ input[name="newsletter-email"] {
 
 .subscribe-button {
   width: 200px;
-  height: 100%;
   padding: 12px 15px;
   font-size: 20px;
   line-height: 36px;
@@ -1065,8 +1068,10 @@ input[name="max-price"] {
 }
 
 .view-switcher-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 48px);
+  column-gap: 8px;
+  row-gap: 8px;
   width: 160px;
   margin: 0;
   padding: 0;
@@ -1106,14 +1111,6 @@ input[name="max-price"] {
   right: 0;
   left: 0;
   margin: auto;
-}
-
-.view-item {
-  margin-right: 8px;
-}
-
-.view-item:nth-child(3n) {
-  margin-right: 0;
 }
 
 /* КАРТОЧКА ОТЕЛЯ */
@@ -1323,8 +1320,8 @@ input[name="max-price"] {
 
 .pagination-link {
   display: block;
-  width: 60px;
-  height: 60px;
+  min-width: 60px;
+  min-height: 60px;
   padding: 12px;
   box-sizing: border-box;
   font-size: 20px;
