--- a/styles/style.css
+++ b/styles/style.css
@@ -116,7 +116,7 @@ button, input {
   flex-grow: 1;
   justify-content: space-between;
   margin-right: 70px;
-  margin-left: 209px;
+  margin-left: 239px;
 }
 
 .navigation-list {
@@ -235,8 +235,11 @@ button, input {
 /* ГЛАВНАЯ СТРАНИЦА */
 
 .main-header {
+  position: relative;
   padding-top: 51px;
   margin-bottom: 63px;
+  box-sizing: border-box;
+  height: 485px;
   text-align: center;
   color: #000;
   background-image: url("../images/index-background.jpg");
@@ -247,7 +250,10 @@ button, input {
 
 .main-header::after {
   content: "";
+  position: absolute;
+  bottom: 0;
   display: block;
+  width: 100%;
   height: 57px;
   background-image: url("../images/divider.svg");
   background-repeat: no-repeat;
@@ -266,12 +272,10 @@ button, input {
 }
 
 .promo-main-title {
-  width: 620px;
   margin-bottom: 31px;
 }
 
 .promo-main-desc {
-  width: 654px;
   margin: 0;
   color: #333333;
 }
@@ -320,6 +324,10 @@ button, input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.advantages-list .advantages-item.true-town {
+  align-items: flex-start;
 }
 
 .advantages-more-list > .advantages-item {
@@ -566,13 +574,18 @@ input[name="newsletter-email"] {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 20px 22px;
+  padding: 20px 22px 19px 22px;
   box-sizing: border-box;
+  border: 0;
+  border-radius: 10px 0 0 10px;
+}
+
+input[name="newsletter-email"]::placeholder {
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
-  border: 0;
-  border-radius: 10px 0 0 10px;
+  padding: 0;
+  margin: 0;
 }
 
 .newsletter-label {
@@ -696,6 +709,7 @@ input[name="newsletter-email"] {
 .filter-form {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding-bottom: 70px;
 }
 
@@ -1399,7 +1413,7 @@ input[name="max-price"] {
 }
 
 .footer-social {
-  width: 180px;
+  width: 208px;
 }
 
 .footer-social-list {
