--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,8 @@ body {
   font-size: 22px;
   line-height: 26px;
   font-weight: 400;
-  color: #000;
-  background-color: #fff;
+  color: #000000;
+  background-color: #FFFFFF;
 }
 
 .container {
@@ -38,7 +38,7 @@ body {
   margin: 0 auto;
   width: 1200px;
   min-height: 100%;
-  background-color: #fff;
+  background-color: #FFFFFF;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
@@ -61,7 +61,8 @@ body {
 
 /* КНОПКИ */
 
-button, input {
+button,
+input {
   font-family: "PT Sans", sans-serif;
 }
 
@@ -197,7 +198,7 @@ button, input {
   padding: 9px 15px 8px 15px;
   box-sizing: border-box;
   background-color: #756157;
-  color: #fff;
+  color: #FFFFFF;
   text-decoration: none;
 }
 
@@ -232,7 +233,7 @@ button, input {
   font-size: 10px;
   line-height: 13px;
   letter-spacing: -0.1em;
-  color: #fff;
+  color: #FFFFFF;
 }
 
 /* ГЛАВНАЯ СТРАНИЦА */
@@ -244,7 +245,7 @@ button, input {
   box-sizing: border-box;
   height: 485px;
   text-align: center;
-  color: #000;
+  color: #000000;
   background-image: url("../images/index-background.jpg");
   background-size: cover; /* или background-size: 100% auto; ?? */
   background-color: #3F5E72;
@@ -299,7 +300,7 @@ button, input {
 }
 
 .advantages-list li:nth-child(-n+2) {
-  color: #fff;
+  color: #FFFFFF;
   background-color: #82B3D3;
 }
 
@@ -372,9 +373,9 @@ button, input {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  color: #000;
+  color: #000000;
   list-style: none;
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
 
 .advantages-more-wrapper {
@@ -389,7 +390,7 @@ button, input {
 
 .advantages-more-list li:nth-child(even) {
   color: inherit;
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
 
 .motel .advantages-item-wrapper::before {
@@ -444,7 +445,7 @@ button, input {
 }
 
 .true-town-content .advantages-desc {
-  color: #fff;
+  color: #FFFFFF;
 }
 
 .true-town-image {
@@ -460,7 +461,7 @@ button, input {
 }
 
 .devil-bridge .advantages-desc {
-  color: #fff;
+  color: #FFFFFF;
 }
 
 .devil-bridge-wrapper {
@@ -509,7 +510,7 @@ button, input {
   line-height: 36px;
   font-weight: 700;
   text-decoration: none;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #756157;
 }
 
@@ -530,9 +531,9 @@ button, input {
 /* РАССЫЛКА */
 
 .newsletter {
-  padding: 94px 0px;
+  padding: 94px 0;
   margin-bottom: 45px;
-  color: #fff;
+  color: #FFFFFF;
   text-align: center;
   background-image: url("../images/newsletter-background.jpg");
   background-color: #82B3D3;
@@ -542,9 +543,9 @@ button, input {
 
 .newsletter-inner {
   margin-bottom: 139px;
-  color: #000;
+  color: #000000;
   text-align: center;
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
 
 .newsletter-inner .newsletter-desc {
@@ -605,7 +606,7 @@ input[name="newsletter-email"]::placeholder {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #82B3D3;
   border: 0;
   border-radius: 0 10px 10px 0;
@@ -640,7 +641,7 @@ input[name="newsletter-email"]::placeholder {
   align-items: center;
   font-size: 16px;
   line-height: 21px;
-  color: #fff;
+  color: #FFFFFF;
 }
 
 .breadcrumbs-item:not(:last-child) .breadcrumbs-link:hover {
@@ -685,7 +686,7 @@ input[name="newsletter-email"]::placeholder {
 
 .hotel-filter {
   margin-bottom: 55px;
-  color: #fff;
+  color: #FFFFFF;
   background-image: url("../images/filter-background.jpg");
   background-color: #82B3D3;
   background-size: cover;
@@ -699,7 +700,7 @@ input[name="newsletter-email"]::placeholder {
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
-  color: #fff;
+  color: #FFFFFF;
 }
 
 .hotel-filter-wrapper {
@@ -774,7 +775,7 @@ input[name="newsletter-email"]::placeholder {
   width: 20px;
   height: 20px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #FFFFFF;
   border: none;
   border-radius: 4px;
 }
@@ -805,7 +806,7 @@ input[name="newsletter-email"]::placeholder {
   width: 20px;
   height: 20px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #FFFFFF;
   border: none;
   border-radius: 50%;
 }
@@ -840,7 +841,7 @@ input[name="newsletter-email"]::placeholder {
   height: 48px;
   padding: 0;
   margin: 0;
-  color: #fff;
+  color: #FFFFFF;
   background-color: transparent;
 }
 
@@ -872,14 +873,14 @@ input[name="newsletter-email"]::placeholder {
 .range-bar {
   position: absolute;
   height: 4px;
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
 
 .range-toggle {
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: #fff;
+  background-color: #FFFFFF;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -927,8 +928,8 @@ input[name="min-price"] {
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
-  border: 2px solid #fff;
-  border-right: 1px solid #fff;
+  border: 2px solid #FFFFFF;
+  border-right: 1px solid #FFFFFF;
   border-radius: 4px 0 0 4px;
 }
 
@@ -940,13 +941,13 @@ input[name="max-price"] {
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
-  border: 2px solid #fff;
-  border-left: 1px solid #fff;
+  border: 2px solid #FFFFFF;
+  border-left: 1px solid #FFFFFF;
   border-radius: 0 4px 4px 0;
 }
 
 .range-input::placeholder {
-  color: #fff;
+  color: #FFFFFF;
 }
 
 .range-input[name="min-price"]:hover {
@@ -994,7 +995,7 @@ input[name="max-price"] {
   margin: 0;
   margin-bottom: 20px;
   box-sizing: content-box;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #82B3D3;
   border: 0;
 }
@@ -1016,7 +1017,7 @@ input[name="max-price"] {
 .reset-link {
   display: block;
   margin: 0;
-  color: #fff;
+  color: #FFFFFF;
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
@@ -1128,7 +1129,7 @@ input[name="max-price"] {
 }
 
 .view-button:hover {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .view-button:focus {
@@ -1136,11 +1137,11 @@ input[name="max-price"] {
 }
 
 .view-button:active {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .view-button-current {
-  border-color: #000;
+  border-color: #000000;
 }
 
 .view-button-icon {
@@ -1197,7 +1198,7 @@ input[name="max-price"] {
 }
 
 .hotel-about-button {
-  color: #fff;
+  color: #FFFFFF;
   text-decoration: none;
   background-color: #756157;
   padding: 9px 15px 8px 15px;
@@ -1220,7 +1221,7 @@ input[name="max-price"] {
 
 .hotel-favorites-button {
   padding: 9px 15px 8px;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #82B3D3;
   border: 0;
 }
@@ -1240,7 +1241,7 @@ input[name="max-price"] {
 }
 
 .added-favorites-button {
-  color: #fff;
+  color: #FFFFFF;
   background-color: #7DB54F;
 }
 
@@ -1369,7 +1370,7 @@ input[name="max-price"] {
   line-height: 36px;
   font-weight: 700;
   text-align: center;
-  color: #fff;
+  color: #FFFFFF;
   text-decoration: none;
   background-color: #82B3D3;
   border-radius: 4px;
@@ -1390,7 +1391,7 @@ input[name="max-price"] {
 }
 
 .pagination-current {
-  color: #000;
+  color: #000000;
   background-color: #F2F2F2;
 }
 
@@ -1483,7 +1484,7 @@ input[name="max-price"] {
   width: 331px;
   font-size: 40px;
   line-height: 40px;
-  color: #000;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -1504,7 +1505,7 @@ input[name="max-price"] {
 .copyright-logo-icon {
   display: block;
   margin-left: auto;
-  color: #000;
+  color: #000000;
 }
 
 .copyright-logo:focus,
@@ -1538,7 +1539,7 @@ input[name="max-price"] {
   margin: auto;
   padding: 62px 70px 70px 70px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #FFFFFF;
   border-radius: 30px;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
 }
@@ -1646,8 +1647,8 @@ input[name="max-price"] {
 }
 
 .modal-search-field:active {
-  background-color: #fff;
-  outline: 2px solid #000;
+  background-color: #FFFFFF;
+  outline: 2px solid #000000;
 }
 
 .number-of-guests .modal-search-field {
@@ -1656,7 +1657,7 @@ input[name="max-price"] {
 }
 
 .modal-search-field::placeholder {
-  color: #000;
+  color: #000000;
 }
 
 .number-of-guests .modal-search-field {
@@ -1675,7 +1676,7 @@ input[name="max-price"] {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #83B3D3;
   border: none;
   border-radius: 10px;
@@ -1789,7 +1790,7 @@ input[name="max-price"] {
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #333;
   border-radius: 10px;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
@@ -1812,7 +1813,7 @@ input[name="max-price"] {
 }
 
 .tooltip-icon {
-  color: #fff;
+  color: #FFFFFF;
   position: absolute;
   width: 3px;
   height: 12px;
